<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"  >
  
    <TextView
        android:id="@+id/tv_pum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall" 
        android:clickable="true" android:onClick="onClickPum"
        android:text="pum" />
   
      <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1" />
    <TextView
        android:id="@+id/tv_line_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="lineNo"
        android:text="line_no" />

    </LinearLayout>

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"  
          android:orientation="horizontal" >

         <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1" />

 <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1" />

     <TextView
	        android:id="@+id/count"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:text="0"  />
     </LinearLayout>

<LinearLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="horizontal" >

    <EditText
        android:id="@+id/e_first_name"
        android:layout_width="0dp" android:layout_weight="1"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="first name"
        android:inputType="textPersonName"/>


    <EditText
        android:id="@+id/e_last_name"
        android:layout_width="0dp" android:layout_weight="1"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="last name"
        android:inputType="textPersonName" />

</LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_vertical" />


    <LinearLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="horizontal" >

    <EditText
        android:id="@+id/e_date_of_birth"
        android:layout_width="0dp" android:layout_weight="1"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="dob"  />

    <EditText
        android:id="@+id/e_zip_code"
        android:layout_width="0dp" android:layout_weight="1"
        android:layout_height="wrap_content"
        android:gravity="center" android:inputType="textPersonName"
        android:text="zip_code"  />


</LinearLayout>


    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_vertical" />
 
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </View>
    

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_vertical" />
  
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal" >
       <View
        android:layout_width="3dp"
        android:layout_height="1dp"  />
       

      <Button
          android:id="@+id/b_edit"
          android:layout_width="0dp"
          android:layout_height="60dp"
          android:layout_weight="1"
          android:onClick="onClickEdit"
          android:text="@string/edit" />

      <Button
        android:id="@+id/b_new"
        android:layout_width="0dp" android:layout_weight="1"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal|top"
        android:onClick="onClickNew" 
        android:text="@string/new1" />

      <Button
        android:id="@+id/b_del"
        android:layout_width="0dp" android:layout_weight="1"
        android:layout_height="60dp" 
        android:onClick="onClickDel" 
        android:text="@string/del" />
     </LinearLayout>
      
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">
       
      <View
        android:layout_width="3dp"
        android:layout_height="1dp"  />

      <Button
          android:id="@+id/previous"
          android:layout_width="0dp"
          android:layout_height="60dp"
          android:layout_weight="1"
          android:onClick="prev"
          android:text="@string/previous" />

        <View
        android:layout_width="3dp"
        android:layout_height="1dp"  /> 
    <Button
        android:id="@+id/next"
        android:layout_width="0dp" android:layout_weight="1"
        android:layout_height="60dp" 
        android:onClick="showContactDetail"
        android:text="@string/next" /> 
   </LinearLayout>

</LinearLayout>